# models/disponibilidad_apropiacion_solicitud_rp.go
@@ -1,0 +1,8 @@
+package models
+
+type DisponibilidadApropiacionSolicitud_rp struct {
+	Id                        int
+	DisponibilidadApropiacion int `orm:"column(disponibilidad_apropiacion)"`
+	SolicitudRp               int `orm:"column(solicitud_rp)"`
+	Monto                     int `orm:"column(monto)"`
+}
