# models/necesidad.go
@@ -1,11 +1,12 @@
 package models
 
 type Necesidad struct {
-	Id              int     `orm:"column(id);pk"`
-	Numero          int     `orm:"column(numero);null"`
-	Vigencia        float64 `orm:"column(vigencia)"`
-	UnidadEjecutora int     `orm:"column(unidad_ejecutora)"`
-	Objeto string `orm:"column(objeto)"`
-	Valor float64 `orm:"column(valor)"`
-	Justificacion string `orm:"column(justificacion)"`
+	Id                          int     `orm:"column(id);pk"`
+	Numero                      int     `orm:"column(numero);null"`
+	Vigencia                    float64 `orm:"column(vigencia)"`
+	UnidadEjecutora             int     `orm:"column(unidad_ejecutora)"`
+	Objeto                      string  `orm:"column(objeto)"`
+	Valor                       float64 `orm:"column(valor)"`
+	Justificacion               string  `orm:"column(justificacion)"`
+	DatosDependenciaSolicitante *Dependencia
 }
